--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#fb1" />
   <meta name="description" content="Dogs - Rede Social para cachorros" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>É necessário habilitar o JavaScript para visualizar este site.</noscript>
   <div id="root"></div>
 
 </body>
